# console_bmp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
bmp_reader/: CMakeLists.txt  README.md
bmp_reader/include/bmp_reader/: bit_view.hpp  bitmasks_reader.hpp  bitshift.hpp  bmp_file_info.hpp  bmp_reader.hpp  color_bitmasks.hpp  palette_reader.hpp  pixels.hpp  print.hpp  rgba8_image.hpp
bmp_reader/include/bmp_reader/dib_headers/: header_base.hpp  header_parser.hpp  os21x.hpp  os21x_parser.hpp  os22x.hpp  os22x_parser.hpp  win_core.hpp  win_core_parser.hpp  win_info.hpp  win_info_parser.hpp
bmp_reader/include/bmp_reader/images/: image.hpp  pixels.hpp  rgba8.hpp
bmp_reader/include/bmp_reader/pixel_reader/: pixel_bitmasked_reader.hpp  pixel_paletted_reader.hpp  pixel_reader.hpp
bmp_reader/include/bmp_reader/readers/: bitmasks_reader.hpp  bmp_os21x_reader.hpp  bmp_reader_base.hpp  bmp_win_core_reader.hpp  bmp_win_info_reader.hpp  palette_reader.hpp  pixel_bitmasked_reader.hpp  pixel_paletted_reader.hpp  pixel_reader_base.hpp  win_info_reader.hpp
bmp_reader/include/bmp_reader/util/: bit_view.hpp  bitshift.hpp  cmyk_to_rgb.hpp  ctor_arg.hpp  print.hpp  type_arg.hpp
bmp_reader/include/bmp_reader/win_info_reader/: bitmasks_reader.hpp  win_info_reader.hpp
bmp_reader/src/: bit_view.cpp  bitmasks_reader.cpp  bmp_file_info.cpp  bmp_reader.cpp  palette_reader.cpp
bmp_reader/src/dib_headers/: os21x.cpp  os21x_parser.cpp  os22x.cpp  os22x_parser.cpp  win_core.cpp  win_core_parser.cpp  win_info.cpp  win_info_parser.cpp
bmp_reader/src/pixel_reader/: pixel_bitmasked_reader.cpp  pixel_paletted_reader.cpp  pixel_reader.cpp
bmp_reader/src/readers/: bitmasks_reader.cpp  bmp_os21x_reader.cpp  bmp_reader_base.cpp  bmp_win_core_reader.cpp  bmp_win_info_reader.cpp  palette_reader.cpp  pixel_bitmasked_reader.cpp  pixel_paletted_reader.cpp  pixel_reader_base.cpp  win_info_reader.cpp
bmp_reader/src/util/: bit_view.cpp  bitshift.cpp
console_bmp/: CMakeLists.txt
console_bmp/include/: bmp_file_info.hpp  bmp_reader.hpp  print.hpp
console_bmp/include/console_bmp/: bmp_display.hpp  cli_args.hpp  get_terminal_size.hpp
console_bmp/include/dib_headers/: header_parser.hpp  os21x.hpp  os22x.hpp
console_bmp/include/images/: image.hpp  rgba8.hpp
console_bmp/include/readers/: win_info_reader.hpp
console_bmp/src/: bmp_display.cpp  bmp_display_sfml.cpp  cli_args.cpp  get_terminal_size.cpp  main.cpp
include/console_bmp/: bit_view.hpp  bitshift.hpp  bmp.hpp  bmp_file_info.hpp  bmp_reader.hpp  bmp_rgb8.hpp  image.hpp  palette_view.hpp  pixel_array_view.hpp
include/console_bmp/dib_headers/: header_base.hpp  header_parser.hpp  os21x.hpp  os22x.hpp  win_core.hpp  win_info.hpp
include/console_bmp/images/: bmp_no_palette.hpp  rgba8.hpp
include/console_bmp/readers/: win_info_reader.hpp
sample_images/: pixel_formats.txt
src/: bmp_file_info.cpp  bmp_reader.cpp  main.cpp  palette_view.cpp
src/bmp_parse/: bit_view.cpp
src/console_bmp/: bit_view.cpp  bmp_reader.cpp  bmp_rgb8.cpp  pixel_array_view.cpp
src/console_bmp/images/: bmp_no_palette.cpp
src/console_bmp/readers/: win_info_reader.cpp
src/dib_headers/: os21x.cpp  os22x.cpp  win_core.cpp  win_info.cpp
src/test/: bit_view.cpp
tests/: CMakeLists.txt
tests/include/: test_util.hpp
tests/src/: bit_view.cpp  bmp24.cpp  bmp32.cpp  test_util.cpp
tools/: convert_to_image_dump.py  create_dump_rgba8.py  generate_images.sh  pixel_formats.txt  view_dump_rgba8.py
